--- a/shop.css
+++ b/shop.css
@@ -80,7 +80,7 @@ ul.nav > li:nth-of-type(4+n):hover > ul{
 section{
     background-color: #ffffff;
     width: 100%;
-    max-width: 1200px;
+    max-width: 90%;
     margin: auto;
     margin-top: 50px;
     border: 1px solid #ffffff;
@@ -90,7 +90,7 @@ section{
 div.a{
     display: grid;
     grid-template-columns: repeat(5,minmax(0px,1fr));
-    grid-template-rows: repeat(2,minmax(0px,300px));
+    grid-template-rows: repeat(2,minmax(0px,1fr));
     overflow: hidden;
 }
 
@@ -116,7 +116,7 @@ div.c > img{
 div.d{
     background-color: red;
     overflow: hidden;
-    height: 85%;
+    height: 83%;
 }
 
 div.d > img{
@@ -201,7 +201,7 @@ ul.f2 > li:hover{
 
 
 
-/* MEDIA QUERIES */
+/* MEDIA QUERIES Laptop 1024px*/
 @media screen and (max-width: 1024px) {
     
 
@@ -212,7 +212,7 @@ ul.f2 > li:hover{
 
     section > div.a{
         grid-template-columns: repeat(4,minmax(0px,1fr));
-        grid-template-rows: repeat(2,minmax(0px,300px));
+        grid-template-rows: repeat(2,minmax(0px,1fr));
     }
 
     div.c{
@@ -232,6 +232,7 @@ ul.f2 > li:hover{
     }
 }
 
+/* Tablet */
 @media screen and (max-width: 768px) {
     body{
         background-color: lightblue;
@@ -251,29 +252,34 @@ ul.f2 > li:hover{
 
     section > div.a{
         grid-template-columns: repeat(3,minmax(0px,1fr));
-        grid-template-rows: repeat(2,minmax(0px,320px));
+        grid-template-rows: repeat(2,minmax(0px,1fr));
     }
 }
 
 
-/* MEDIA QUERIES */
+/* Iphone Plus */
 @media screen and (max-width: 425px) {
     body{
         background-color: lightgreen;
         font: 14px/18px Arial,Helvetica,sans-serif;
     }
 
+    section{
+        width: 100%;
+        max-width: 100%;
+    }
+
     section > div.a{
         grid-template-columns: repeat(2,minmax(0px,1fr));
-        grid-template-rows: repeat(3,minmax(0px,250px));
+        grid-template-rows: repeat(3,minmax(0px,1fr));
     }
 
     div.d{
-        height: 82%;
+        max-height: 82%;
     }
 }
 
-/* MEDIA QUERIES */
+/* Iphone */
 @media screen and (max-width: 320px) {
     body{
         background-color: lightsalmon;
@@ -282,10 +288,10 @@ ul.f2 > li:hover{
 
     section > div.a{
         grid-template-columns: repeat(2,minmax(0px,1fr));
-        grid-template-rows: repeat(3,minmax(0px,210px));
+        grid-template-rows: repeat(3,minmax(0px,1fr));
     }
 
     div.d{
-        height: 80%;
+        max-height: 78%;
     }
 }
